Bug 405790 - Changes of the icon, name or command of an app present in the favorites list of Kickoff launcher are not applied immediately
Summary: Changes of the icon, name or command of an app present in the favorites list ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 5.27.8
Platform: Arch Linux Linux
: HI normal
Target Milestone: 1.0
Assignee: Unassigned bugs
URL:
Keywords:
: 434311 437986 438468 438803 443185 454638 477624 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-03-23 21:26 UTC by Patrick Silva
Modified: 2024-01-27 04:45 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-03-23 21:26:15 UTC
SUMMARY
if I change the icon of an app present in kickoff's favorites list,
the new icon only appears in the favorites list after I restart plasma.

STEPS TO REPRODUCE
1. set kickoff as your apps launcher 
2. right click on kickoff's icon, select "Edit applications...'
3. select any app present on your favorites list, change its icon and save the change
4. open kickoff

OBSERVED RESULT
The new icon configured in the step 3 is not visible.
The previous icon is still present.
Restart plasma: now the icon confifured in the step 3 is visible
in the favorites list.

EXPECTED RESULT
the app icon is immediately updated in the favorites list.


SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.3
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2
Comment 1 Patrick Silva 2020-12-10 22:04:40 UTC
it's still reproducible.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Comment 2 Nate Graham 2021-06-08 23:39:43 UTC
*** Bug 437986 has been marked as a duplicate of this bug. ***
Comment 3 postix 2021-06-12 09:08:06 UTC
*** Bug 438468 has been marked as a duplicate of this bug. ***
Comment 4 postix 2021-06-12 09:11:14 UTC
This issue includes also changes in the command of an app, which do not immediately take effect. [1]

[1] https://bugs.kde.org/show_bug.cgi?id=438468
Comment 5 Nate Graham 2021-06-17 18:17:11 UTC
*** Bug 438803 has been marked as a duplicate of this bug. ***
Comment 6 Patrick Silva 2021-10-01 13:03:01 UTC
*** Bug 443185 has been marked as a duplicate of this bug. ***
Comment 7 Patrick Silva 2022-05-31 12:23:18 UTC
*** Bug 454638 has been marked as a duplicate of this bug. ***
Comment 8 Patrick Silva 2022-06-08 11:25:21 UTC
Change in 'Enable launch feedback' setting is also not immediately applied to Favorites. Plasma needs to be restarted.

STEPS TO REPRODUCE
1. right-click on Kickoff icon and choose 'Edit applications...'
2. search for an app present in the Favorites list of Kickoff and select it - tested on my system with Discord installed with a .deb package and Dolphin
3. change 'Enable launch feedback' setting
4. save the change
5. open the modified app via Favorites list of Kickoff: the change done in the step 3 did not take effect
6. restart Plasma by running 'plasmashell --replace' with krunner and open the app via favorites list of Kickoff again: now the change done in the step 3 works

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.4
Graphics Platform: Wayland
Comment 9 Nate Graham 2023-09-19 20:13:28 UTC
*** Bug 434311 has been marked as a duplicate of this bug. ***
Comment 10 Patrick Silva 2023-11-27 17:28:58 UTC
*** Bug 477624 has been marked as a duplicate of this bug. ***
Comment 11 Bug Janitor Service 2024-01-22 09:50:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3807
Comment 12 Marco Martin 2024-01-22 14:53:41 UTC
Git commit d55422aab0d9da11365de49aae0ef810c942df72 by Marco Martin.
Committed on 22/01/2024 at 15:53.
Pushed by mart into branch 'master'.

Update entries when sycoca changes

Previously when the sycoca db changed, the entries were reloaded only if there were a preferred: scheme (like the browser) otherwise were ignored, but this meant changing name or icon of the entry didn't have any effect until restart
Related: bug 479513

M  +3    -0    applets/kicker/plugin/appentry.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/d55422aab0d9da11365de49aae0ef810c942df72
Comment 13 Marco Martin 2024-01-22 15:04:15 UTC
Git commit ddc5b191b9b1f75abacf3e75f624f6dc04222dfa by Marco Martin.
Committed on 22/01/2024 at 16:04.
Pushed by mart into branch 'Plasma/6.0'.

Update entries when sycoca changes

Previously when the sycoca db changed, the entries were reloaded only if there were a preferred: scheme (like the browser) otherwise were ignored, but this meant changing name or icon of the entry didn't have any effect until restart
Related: bug 479513

M  +3    -0    applets/kicker/plugin/appentry.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/ddc5b191b9b1f75abacf3e75f624f6dc04222dfa