Update entries when sycoca changes

Previously when the sycoca db changed, the entries were reloaded only if there were a preferred: scheme (like the browser) otherwise were ignored, but this meant changing name or icon of the entry didn't have any effect until restart

BUG:405790
BUG:479513